add some changes to project architecture